--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="navbar_frame">
@@ -915,6 +916,154 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+
+        <div class="footer_frame">
+            <div class="container">
+                <div class="footer_top">
+                    <div class="footer_top_box">
+                        <span class="top_box_title">Contact  us</span>
+                        <div class="top_content">
+                            <img src="./public/images/icons/phone-call.svg" alt="">
+                            <div class="text_content">
+                                <strong>Monday-Friday: 08am-9pm</strong><br>
+                                <span>+(1) 123 456 7890</span>
+                            </div>
+                        </div>
+                        <div class="top_content">
+                            <img src="./public/images/icons/email.svg" alt="">
+                            <div class="text_content">
+                                <strong>Need help with your order?</strong><br>
+                                <span>support@zenmart.com</span>
+                            </div>
+                        </div>
+
+
+                    </div>
+                     <div class="footer_support_box">
+                            <span class="top_box_title">Customer Support</span>
+                            <a href="">Contact Us</a>
+                            <a href="">Help Centre</a>
+                            <a href="">Returns & Exchanges</a>
+                            <a href="">Best Buy Financing</a>
+                            <a href="">Best Buy Gift Card</a>
+
+
+
+
+
+                        </div>
+                     <div class="footer_support_box">
+                            <span class="top_box_title">Services</span>
+                            <a href=""> Geek Squad</a>
+                            <a href="">In-Home Advisor</a>
+                            <a href="">Trade-In Program</a>
+                            <a href="">Electronics Recycling</a>
+                            <a href="">Best Buy Health</a>
+
+
+
+
+
+                        </div>
+                     <div class="footer_support_box">
+                            <span class="top_box_title">Follow  us</span>
+                            <div class="social_box">
+                                <i class="fa-brands fa-facebook"></i>
+                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-instagram"></i>
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </div>
+                         <span class="top_box_title">Mobile Apps</span>
+                            <div class="mobile_apps_box">
+                                <div class="apple_logo_box">
+                                    <img src="public/images/icons/apple_icon.png" alt="apple  logo">
+                                    <span>IOS App</span>
+                                </div>
+
+                                 <div class="apple_logo_box">
+                                    <img src="public/images/icons/android_icon.png" alt="apple  logo">
+                                    <span>Android App</span>
+                                </div>
+
+
+
+                            </div>
+
+
+
+
+
+
+
+
+
+
+                        </div>
+
+                    <div class="payment_container">
+                        <div class="payment_wrapper">
+                        <div class="top_box_title">We Accept</div>
+                        <div class="payment_box">
+                            <a href="">
+                                <img src="public/images/icons/visa.png" alt="">
+                            </a>
+                            <a href="">
+                                <img src="public/images/icons/master_card.png" alt="">
+                            </a>
+                            <a href="">
+                                <img src="public/images/icons/apple_pay.png" alt="">
+                            </a>
+                            <a href="">
+                                <img src="public/images/icons/dicvover.png" alt="">
+                            </a>
+                            <a href="">
+                                <img src="public/images/icons/paypal.png" alt="">
+                            </a>
+                            <a href="">
+                                <img src="public/images/icons/amex.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    </div>
+
+                </div>
+
+
+
+
+
+                <div class="footer_bott">
+                    <div class="footer_bott_main">
+                        <div class="footer_bott_left">
+                            <span>© 2022 Zenmart. All Rights Reserved</span>
+                            <span>Privacy  ·  Terms  ·  Sitemap</span>
+                        </div>
+                        <div class="footer_bott_right" style="    margin-left: 342px;">
+
+                            <div class="footer_select_box">
+                                <span>Currency</span>
+                                <select name="" id="">
+                                    <option value="USD"  selected>USD</option>
+                                    <option value="UZS">UZS</option>
+                                    <option value=""></option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="footer_bott_right">
+
+                            <div class="footer_select_box">
+                                <span>Language</span>
+                                <select name="" id="">
+                                    <option value="USD"  selected>English</option>
+                                    <option value="UZS">UZS</option>
+                                    <option value=""></option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
