fix:  refuctoring css  style &  home page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="navbar_frame">
         <div class="container">
             <div class="navbar_top">
-                <a href="#">
+                <a href="index.html">
                     <img src="./public/images/icons/logo.png" alt="">
                 </a>
                 <div class="nav_search_frame">
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="nav_top_menu">
-                    <a href="#">
+                    <a href="./order/cart.html">
                         <div class="top_menu_box">
                             <div class="box_icon_box">
                                 <img src="./public/images/icons/heart.svg" alt="">
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="./other/login.html">
                         <div class="top_menu_box">
                             <div class="box_icon_box">
                                 <img src="./public/images/icons/vector.svg" alt="">
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="./order/cart.html">
                         <div class="top_menu_box">
                             <div class="box_icon_box">
                                 <div class="basket_count">2</div>
@@ -78,19 +78,19 @@
                     </div>
                     <div class="navbar_route_menu">
                         <div class="router_menu">
-                            <a href="#" class="active">Home</a>
+                            <a href="index.html" class="active">Home</a>
                         </div>
                         <div class="router_menu">
-                            <a href="#">Shop</a>
+                            <a href="./product/all.html">Shop</a>
                         </div>
                         <div class="router_menu">
-                            <a href="#">Orders</a>
+                            <a href="./order/cart.html">Orders</a>
                         </div>
                         <div class="router_menu">
-                            <a href="#">About</a>
+                            <a href="./other/about.html">About</a>
                         </div>
                         <div class="router_menu">
-                            <a href="#">Contact</a>
+                            <a href="./other/contact.html">Contact</a>
                         </div>
                     </div>
                     <div class="sorting_menu">
@@ -112,7 +112,7 @@
                         <div>Special Offer</div>
                         <span>Immersive  Entertainment</span>
                         <p>Discover our new items. Up to 25% Off !</p>
-                        <a href="#">Shop Now</a>
+                        <a href="./product/all.html">Shop Now</a>
                         <img src="./public/images/icons/header_img.svg" alt="rasm">
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                         <div class="box_left">
                             <span>Starting from $899</span>
                             <p>Health  Care  Monitor</p>
-                            <a href="#">Show  Now</a>
+                            <a href="./product/choosenProduct.html">Show  Now</a>
                             <div class="hover_border"></div>
                         </div>
                         <div class="box_right">
@@ -138,7 +138,7 @@
                         <div class="box_left">
                             <span>Starting from $899.</span>
                             <p>Hanpicked  Headphones </p>
-                            <a href="#">Show  Now</a>
+                            <a href="./product/choosenProduct.html">Show  Now</a>
                             <div class="hover_border"></div>
                         </div>
                         <div class="box_right">
@@ -201,7 +201,7 @@
                 <div class="container">
                     <div class="category_top">
                         <span>Shop Category</span>
-                        <a href="">View All Categories</a>
+                        <a href="./product/all.html">View All Categories</a>
                     </div>
                     <div class="category_wrapper">
 
@@ -255,7 +255,7 @@
             <div class="container">
                 <div class="category_top">
                     <span>Top  Selling   Products</span>
-                        <a href="">View All</a>
+                        <a href="./product/all.html">View All</a>
                 </div>
                 <div class="product_wrapper">
                     <div class="next_prev_box">
@@ -264,7 +264,7 @@
 
                     <div class="product_boxes">
                         <div class="product_box">
-                            <a href="#">
+                            <a href="./product/choosenProduct.html">
                                 <div class="product_img_box" style="background: url('public/images/products/watch.png'); background-size: cover;" >
 
                                     <div class="hover_box">
@@ -298,7 +298,7 @@
                             </div>
                         </div>
                          <div class="product_box">
-                            <a href="#">
+                            <a href="./product/choosenProduct.html">
                                 <div class="product_img_box" style="background: url('public/images/products/phone.png'); background-size: cover;" >
 
                                     <div class="hover_box">
@@ -332,7 +332,7 @@
                             </div>
                         </div>
                          <div class="product_box">
-                            <a href="#">
+                            <a href="./product/choosenProduct.html">
                                 <div class="product_img_box" style="background: url('public/images/products/iRobot.png'); background-size: cover;" >
 
                                     <div class="hover_box">
@@ -366,7 +366,7 @@
                             </div>
                         </div>
                          <div class="product_box">
-                            <a href="#">
+                            <a href="./product/choosenProduct.html">
                                 <div class="product_img_box" style="background: url('public/images/products/dyson.png'); background-size: cover;" >
 
                                     <div class="hover_box">
@@ -461,7 +461,7 @@
             <div class="container">
                   <div class="category_top">
                     <span>Headphones</span>
-                        <a href="">View All</a>
+                        <a href="./product/all.html">View All</a>
                 </div>
 
                 <div class="spec_product_wrapper">
@@ -469,7 +469,7 @@
                         <div class="big_product_content">
                             <span>Now in moon gray</span>
                             <p>Beats  Studio Buds</p>
-                            <a href="">Shop Now</a>
+                            <a href="./product/choosenProduct.html">Shop Now</a>
                             <div class="hover_border"></div>
                         </div>
                         <img src="public/images/products/headphone_big.png" alt="">
@@ -529,7 +529,7 @@
                     <div class="tv_product_boxes">
                         <div class="tv_product_box">
                             <div class="product_img">
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <img src="public/images/products/samsung_tv.png" alt="">
                                 </a>
                             </div>
@@ -537,7 +537,7 @@
                              <div class="product_content_box">
 
                                 <span class="product_title">Samsung</span>
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
                                 </a>
 
@@ -561,7 +561,7 @@
                         </div>
                          <div class="tv_product_box">
                             <div class="product_img">
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <img src="public/images/products/tcl.png" alt="">
                                 </a>
                             </div>
@@ -569,7 +569,7 @@
                              <div class="product_content_box">
 
                                 <span class="product_title">Samsung</span>
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <p class="product_desc">TCL 3-Series 40" 1080p HD LED Android Smart TV (40S334-CA)</p>
                                 </a>
 
@@ -593,7 +593,7 @@
                         </div>
                          <div class="tv_product_box">
                             <div class="product_img">
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <img src="public/images/products/LG-UHD.png" alt="">
                                 </a>
                             </div>
@@ -601,7 +601,7 @@
                              <div class="product_content_box">
 
                                 <span class="product_title">Samsung</span>
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <p class="product_desc">LG 55" 4K UHD HDR OLED webOS Smart TV </p>
                                 </a>
 
@@ -625,7 +625,7 @@
                         </div>
                          <div class="tv_product_box">
                             <div class="product_img">
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <img src="public/images/products/LG-OLED.png" alt="">
                                 </a>
                             </div>
@@ -633,7 +633,7 @@
                              <div class="product_content_box">
 
                                 <span class="product_title">Samsung</span>
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <p class="product_desc">LG 55" 4K UHD HDR OLED webOS Smart TV </p>
                                 </a>
 
@@ -657,7 +657,7 @@
                         </div>
                          <div class="tv_product_box">
                             <div class="product_img">
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <img src="public/images/products/SONY-TV.png" alt="">
                                 </a>
                             </div>
@@ -665,7 +665,7 @@
                              <div class="product_content_box">
 
                                 <span class="product_title">Samsung</span>
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
                                 </a>
 
@@ -766,7 +766,7 @@
                     </div>
 
                   <div class="show_more_btn">
-                        <a href="#">Show More</a>
+                        <a href="./product/all.html">Show More</a>
                   </div>
 
 
@@ -781,7 +781,7 @@
                     <div class="event_image_box">
                         <div class="event_product_box">
                             <div class="product_img">
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <img src="public/images/products/sony_notebook.png" alt="">
                                 </a>
                             </div>
@@ -789,7 +789,7 @@
                              <div class="event_product_content_box">
 
                                 <span class="product_title">Samsung</span>
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <p class="product_desc">SAMSUNG Chromebook 4+ 15.6" Intel® Celeron® ...</p>
                                 </a>
 
@@ -813,7 +813,7 @@
                         </div>
                         <div class="event_product_box">
                             <div class="product_img">
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <img src="public/images/products/sony_playstation.png" alt="">
                                 </a>
                             </div>
@@ -821,7 +821,7 @@
                              <div class="event_product_content_box">
 
                                 <span class="product_title">Samsung</span>
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <p class="product_desc">SAMSUNG Chromebook 4+ 15.6" Intel® Celeron® ...</p>
                                 </a>
 
@@ -845,7 +845,7 @@
                         </div>
                         <div class="event_product_box">
                             <div class="product_img">
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <img src="public/images/products/apple_watch.png" alt="">
                                 </a>
                             </div>
@@ -853,7 +853,7 @@
                              <div class="event_product_content_box">
 
                                 <span class="product_title">Samsung</span>
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <p class="product_desc">SAMSUNG Chromebook 4+ 15.6" Intel® Celeron® ...</p>
                                 </a>
 
@@ -877,7 +877,7 @@
                         </div>
                         <div class="event_product_box">
                             <div class="product_img">
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <img src="public/images/products/canon_camera.png" alt="">
                                 </a>
                             </div>
@@ -885,7 +885,7 @@
                              <div class="event_product_content_box">
 
                                 <span class="product_title">Samsung</span>
-                                <a href="">
+                                <a href="./product/choosenProduct.html">
                                     <p class="product_desc">SAMSUNG Chromebook 4+ 15.6" Intel® Celeron® ...</p>
                                 </a>
 
@@ -919,7 +919,14 @@
             </div>
         </div>
 
-        <div class="footer_frame">
+
+
+
+
+
+    </div>
+
+    <div class="footer_frame">
             <div class="container">
                 <div class="footer_top">
                     <div class="footer_top_box">
@@ -1066,11 +1073,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
-    </div>
 
 </body>
 </html>
